force-app/main/default/objects/acn_ttn__ApexClasssCleanupTransaction__c/acn_ttn__ApexClasssCleanupTransaction__c.object-meta.xml
<CustomObject>
    <label>ApexClasssCleanupTransaction</label>
    <nameField>
        <displayFormat>TRAN-{0000}</displayFormat>
        <label>ApexClasssCleanupTransactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ApexClasssCleanupTransaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>