force-app/main/default/objects/acn_ttn__ApexClasssCleanupTransaction__c/fields/acn_ttn__AfterCleanupPercentage__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__AfterCleanupPercentage__c</fullName>
    <label>AfterCleanupPercentage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>