force-app/main/default/objects/acn_ttn__ApexClasssCleanupTransaction__c/fields/acn_ttn__Cleaned_Count__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Cleaned_Count__c</fullName>
    <label>Cleaned Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>