force-app/main/default/objects/acn_ttn__ApexClasssCleanupTransaction__c/fields/acn_ttn__Transactiontype__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Transactiontype__c</fullName>
    <label>Transactiontype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex Class/Trigger</fullName>
            </value>
            <value>
                <fullName>Report/Dashboard</fullName>
            </value>
            <value>
                <fullName>Apex Page/Component</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>