force-app/main/default/objects/acn_ttn__ApexClasssCleanupTransaction__c/listViews/acn_ttn__All.listView-meta.xml
<ListView>
    <fullName>acn_ttn__All</fullName>
    <columns>NAME</columns>
    <columns>acn_ttn__Deployment_Status__c</columns>
    <columns>acn_ttn__Exception__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>